--- a/styles/style.css
+++ b/styles/style.css
@@ -92,7 +92,7 @@ h3 {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  letter-spacing: 0.1px;
+  letter-spacing: 0.005em;
   color: var(--color-text);
   text-decoration: none;
   display: inline-flex;
