Fix the bug with layout of the cases

--- a/styles/style.css
+++ b/styles/style.css
@@ -1721,7 +1721,7 @@ nav .menu__link--resume .icon,
 }
 
 /* === Layout for Case Study with Desktop Side Nav === */
-.case-layout {
+/* .case-layout {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -1729,17 +1729,17 @@ nav .menu__link--resume .icon,
   max-width: 1080px;
   margin: 0 auto;
   gap: 0;
-}
+} */
 
 /* Side nav styling */
 .case-sidenav {
-  flex: 0 0 200px;
-  position: sticky;
-  top: 100px;
-  align-self: flex-start;
+  /* flex: 0 0 200px; */
+  position: fixed;
+  top: 120px;
+  left: calc(50% - 540px - 220px);
   width: 200px;
-  margin-right: 60px;
-  z-index: 10;
+  /* margin-right: 60px; */
+  z-index: 100;
   background: none;
   display: block;
 }
@@ -1767,16 +1767,20 @@ nav .menu__link--resume .icon,
 }
 
 /* Responsive: hide side nav & collapse layout on tablet/mobile */
-@media (max-width: 1080px) {
+/* @media (max-width: 1080px) {
   .case-layout { flex-direction: column; }
   .case-sidenav { display: none !important; }
-}
+} */
 
 /* Main column in the layout */
-.case-layout main {
+/* .case-layout main {
   flex: 1 1 0;
   min-width: 0;
-}
+} */
+
+/* .case-layout main {
+  padding-bottom: 100px; 
+} */
 
 /* Back to top button */
 .back-to-top {
@@ -1800,6 +1804,17 @@ nav .menu__link--resume .icon,
 .back-to-top svg { width: 28px; height: 28px; }
 .back-to-top.show { display: flex; opacity: 1; }
 
+@media (max-width: 1280px) {
+  .case-sidenav {
+    left: 0;
+  }
+}
+
+@media (max-width: 1080px) {
+  .case-sidenav {
+    display: none !important;
+  }
+}
 
 
 
