--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
 :root {
   --color-background: #fafaf9;
   --color-text: #1F2937;
-  --color-accent: #E11D48;
-  --color-accent-on-hover:#BE123C;
+  --color-accent: #BE123C;
+  --color-accent-on-hover:#9F1239;
 ;
 
   --color-border: #D6D3D1;
@@ -289,7 +289,7 @@ h3 {
   min-width: 0;  
 }
 .work-card__title--blue {
-  color: #2563EB;
+  color: 1D4ED8;
 }
 .work-card__title--yellow {
   color: #A16207;
