add the media for 376px to fix the issue with the icon overlap

--- a/styles/style.css
+++ b/styles/style.css
@@ -1913,19 +1913,11 @@ nav .menu__link--resume .icon,
   color: var(--Colors-Rose-700, #BE123C);
 ;
 }
-/* .jump-menu__link:hover .jump-menu__label,
-.jump-menu__link.active .jump-menu__label {
-  color: #e11d48;
-} */
 .jump-menu__link:focus-visible {
   outline: 2px solid #e11d48;
   background: #f3f4f6;
 }
 
-/* .jump-menu__link:hover .jump-menu__arrow,
-.jump-menu__link:focus .jump-menu__arrow {
-  color: #e11d48;
-} */
 .jump-menu__link:hover .jump-menu__icon-bg,
 .jump-menu__link:focus .jump-menu__icon-bg {
   background: #e0e7ff;
@@ -1954,6 +1946,7 @@ nav .menu__link--resume .icon,
 .twocol--wide-mg40 {
   margin-bottom: 40px;
 }
+
 
 @media (max-width: 1080px) { 
   .jump-menu {
@@ -1985,13 +1978,6 @@ nav .menu__link--resume .icon,
     left: 0;
   }
 }
-
-/* @media (max-width: 1080px) {
-  .case-sidenav {
-    display: none !important;
-  }
-} */
-
 
 
 /*🦊 MEDIA  */
@@ -2557,5 +2543,10 @@ nav .menu__link--resume .icon,
   }
   .case-highlights__visual-image--large {
     max-width: 300px !important;
+  }
+}
+@media (max-width: 376px) {
+  .work-card__subtitle {
+    max-width: 200px;
   }
 }
